--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,8 +6,8 @@ user.properties.file=C:\\Users\\matias\\AppData\\Roaming\\NetBeans\\8.2\\build.p
 
 do.depend=false
 do.jar=true
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Lorena\\Documents\\NetBeansProjects\\Inmobiliaria23\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar=D:\\java ejercicios\\DRIVER DE CONEXION\\mariadb-java-client-3.0.11.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Lorena\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\matias\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
