--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,12 +31,14 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Lorena\\Desktop\\AP 4.0\\DESARROLLO DE APLICACIONES\\Drivers\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Lorena\\Desktop\\mariadb-java-client-3.0.11.jar
+file.reference.mariadb-java-client-3.0.11.jar-1=D:\\java ejercicios\\DRIVER DE CONEXION\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
